@@ -27,6 +27,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - change pbs_server to listen on all interfaces. TRQ-923
   b - Fixed memory leaks in generate_server_gpustats_smi. Only used with --enable-nvidia-gpus
       is on.
+  b - Fix so "pbs_server --ha" does not fail when checking path for server.lock file. TRQ-907.
 
 4.0.1
   b - Fix trqauthd init scripts to use correct path to trqauthd.
